UI: terms of usage error message covers the checkmark making it impossible to click and agree?! fix account.css

--- a/salvus/page/account.css
+++ b/salvus/page/account.css
@@ -1,7 +1,6 @@
 .popover-create-account {
     width: 400px;
     background-color: #ff0077;
-    margin-left:-20px;
 }
 
 .account-error-text {
@@ -9,4 +8,4 @@
 }
 
 .salvus-password-meter {
-}
+} 
